--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,3 @@
 @import url('https://cdn.jsdelivr.net/gh/wanteddev/wanted-sans@v1.0.1/packages/wanted-sans/fonts/webfonts/variable/split/WantedSansVariable.min.css');
 @import "tailwindcss";
+@config "../tailwind.config.js";
